--- a/public/styles.css
+++ b/public/styles.css
@@ -1,17 +1,62 @@
-html, body {
-  margin: 0;
+html {
+  position: relative;
+  min-height: 100%;
 }
 
 body {
+  margin: 0;
   background-color: #aca;
-  padding: 1rem;
 }
 
 h1 {
   color: red;
 }
 
-#create-area {
+header {
+  min-width 30rem;
+  width: 60%;
+  text-align: center;
+}
+
+main {
   width: 60%;
   margin: 0 auto;
+  padding-bottom: 1rem;
+}
+
+footer {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  background-color: white;
+  width: 100%;
+}
+
+.tweet {
+  margin: 0.5rem;
+  padding: 0.5rem;
+  background-color: lightgray;
+  box-shadow: 3px 3px 2px gray;
+  display: inline-block;
+
+}
+
+.char-count {
+  color: gray;
+}
+
+.visibility {
+  color: blue;
+  visibility: hidden;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+}
+
+#create-area {
+
+}
+
+#create-area textarea {
+  width: 100%;
 }
