--- a/public/styles.css
+++ b/public/styles.css
@@ -5,12 +5,28 @@ html {
 
 body {
   margin: 0;
-  background-color: #aca;
+  background-color: #fcff4d;
   padding-bottom: 3rem;
+  color: #002153;
+  font-family: "Tahoma", "Geneva", sans-serif;
+  background-image: url("https://www.transparenttextures.com/patterns/gplay.png");
+  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 
 h1 {
-  color: red;
+  color: #4a93ff;
+  font-family: 'Ranchers', cursive;
+  font-weight:normal;
+  font-size: 2.8rem;
+  display: inline-block;
+}
+
+h2 {
+  margin-top: 0;
+  color: #4a93ff;
+  font-weight: normal;
+  font-size: 1.3rem;
+  display: inline-block;
 }
 
 header {
@@ -32,7 +48,7 @@ footer {
   padding-top: 0.5rem;
   position: absolute;
   bottom: 0;
-  background-color: white;
+  background-color: #e6f2ff;
   width: 100%;
   height: 3rem;
 }
@@ -40,7 +56,7 @@ footer {
 .tweet {
   margin: 0.5rem;
   padding: 0.5rem;
-  background-color: white;
+  background-color: #e6f2ff;
   box-shadow: 3px 3px 2px gray;
   position: relative;
   white-space: pre-wrap;
@@ -84,4 +100,5 @@ footer {
   width: 100%;
   border: none;
   outline: none;
+  color: #4a93ff;
 }
